--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "player"
   ],
   "dependencies": {
-    "bodymovin": "^4.5.4",
+    "bodymovin": "4.6.11",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-htmlbars": "^1.0.3"
   },
